--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,3 +4,9 @@ AllCops:
 
 Metrics/LineLength:
   Max: 120
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Documentation:
+  Enabled: false
