--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6.x
+    - name: Set up RVM
+      run: |
+        curl -sSL https://get.rvm.io | bash
 
+    - name: Set up Ruby from .ruby-version
+      run: |
+        source $HOME/.rvm/scripts/rvm
+        rvm install $(cat .ruby-version) --binary
+        rvm --default use $(cat .ruby-version)
 
     - name: Build App
       env:
@@ -32,4 +36,5 @@ jobs:
       env:
         RAILS_ENV: test
       run:
+        source $HOME/.rvm/scripts/rvm
         bundle exec rspec
